--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
+
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+	<%= f.fields_for :ingredients do |ingredient_fields| %>
+        Ingredient 1 Name: <%= ingredient_fields.text_field :name %>
+        Ingredient 1 Quantity: <%= ingredient_fields.text_field :quantity %>
+    <% end %>
+    <%= link_to "Second Ingredient", @recipe %>
+  <%= f.submit %>
 <% end %>
